--- a/IntroR_Course/Intro-R-and-Tidyverse.qmd
+++ b/IntroR_Course/Intro-R-and-Tidyverse.qmd
@@ -90,7 +90,7 @@ To launch RStudio, double-click on the RStudio icon. Launching RStudio also laun
 
 ![](images/image-1955476925.png)
 
-## Notice the default panes:
+Notice the default panes:
 
 -   Console (entire left)
 
@@ -176,8 +176,8 @@ To take full advantage of R, you need to install R packages. R packages are load
 Let's install some packages now. You should only need to install a package once on your machine.
 
 ```{r}
-install.packages("here") # This package helps with reproducbility and file paths
-install.packages("tidyverse") # This package will be used for data wrangling and hosts the majority of functions we will be using today
+#install.packages("here") # This package helps with reproducbility and file paths
+#install.packages("tidyverse") # This package will be used for data wrangling and hosts the majority of functions we will be using today
 ```
 
 Once a package is install we need to load and attach the packages we would like to use in our script. Once a package is loaded using **`library()`**, you can access its functions and datasets directly without having to explicitly refer to the package name each time. This is because the functions and datasets from the package are attached to the search path of the R session.
@@ -278,7 +278,7 @@ Unlike the `print()` function, `head()` returns the extracted data. You could us
 To open the dataset in RStudio's Data Viewer, use the `view()` function:
 
 ```{r}
-View(tree_health)
+#View(tree_health)
 ```
 
 We can see what "type" of data `tree_health` is by calling
@@ -371,7 +371,7 @@ head_tree_health<-tree_health[1:6]
 
 As we've seen, when working with tibbles subsetting with single square brackets ("\[\]") always returns a data frame. If you want a vector, use double square brackets ("\[\[\]\]"). For instance to get the third column as a vector:
 
-```{r}
+```{r, results = "hide"}
 tree_health[[3]]
 ```
 
@@ -717,7 +717,7 @@ sub_tree_health2<-sub_tree_health_narm %>%
             max_cir = max(Circumference, na.rm = T))
 ```
 
-#### Counts
+### Counts
 
 When working with data, we often want to know the number of observations found for each factor or combination of factors. For this task, **`dplyr`** provides `count()`. For example, if we wanted to count the number of rows of data for each species, we would do:
 
@@ -733,7 +733,7 @@ sub_tree_health_narm %>%
   count(Site_ID)
 ```
 
-The `count()` function is shorthand for something we\'ve already seen: grouping by a variable, and summarizing it by counting the number of observations in that group. In other words, `surveys %>% count()` is equivalent to:
+The `count()` function is shorthand for something we've already seen: grouping by a variable, and summarizing it by counting the number of observations in that group. In other words, `surveys %>% count()` is equivalent to:
 
 ```{r}
 sub_tree_health_narm %>% 
@@ -791,7 +791,7 @@ max_circumference<-sub_tree_health_narm %>%
 view(max_circumference)
 ```
 
-#### Dealing with dates
+### Dealing with dates
 
 A common issue that new (and experienced!) R users have is converting date and time information into a variable that is suitable for analyses. One way to store date information is to store each component of the date in a separate column. Using `str()`, we can see that currently our date is stored in the YYYYMMDD format.
 
@@ -802,7 +802,7 @@ str(sub_tree_health_narm)
 Maybe we want the year, month, and day to be in separate columns. To do this we can use the `lubridate` package. First let's install and load the package.
 
 ```{r}
-install.packages("lubridate")
+#install.packages("lubridate")
 ```
 
 ```{r}
@@ -881,7 +881,7 @@ Luckily, the data we have been working with thus far has already been in a tidy 
 
 Further arguments include `values_fill` which, if set, fills in missing values with the value provided.
 
-Let\'s use `pivot_wider()` to transform our dataset to find the mean circumference of each species in each plot over the entire survey period. We use `filter()`, `group_by()` and `summarize()` to filter our observations and variables of interest, and create a new variable for the `mean_circumference`.
+Let's use `pivot_wider()` to transform our dataset to find the mean circumference of each species in each plot over the entire survey period. We use `filter()`, `group_by()` and `summarize()` to filter our observations and variables of interest, and create a new variable for the `mean_circumference`.
 
 ```{r}
 sub_gw <- sub_tree_health_narm %>%
@@ -996,7 +996,7 @@ tree_bird<-tree_bird %>%
 
 Great! We have now created a brand new dataset. Let's look at how we could save this dataset.
 
-## Exporting data
+### Exporting data
 
 Similar to the `read_csv` function, we can use the `write_csv` function to save our data outputs. We can also use the `here` function again to help with file paths.
 
@@ -1015,7 +1015,7 @@ Before we move onto data visualisation, let's run a quick test to see if tree sp
 For this we will construct a linear regression using the `lm` function in the `lme4` package. First let's install and attach the package.
 
 ```{r}
-install.packages("lme4")
+#install.packages("lme4")
 ```
 
 ```{r}
@@ -1114,7 +1114,7 @@ We've done all of the hard data wrangling and manipulation - now let's make some
 You know what we need to do first - install and load the package!
 
 ```{r}
-install.packages("ggplot2")
+#install.packages("ggplot2")
 ```
 
 ```{r}
@@ -1129,7 +1129,7 @@ Remember you only need to install a package once. After installation, future scr
 
 **`ggplot2`** refers to the name of the package itself. When using the package we use the function **`ggplot()`** to generate the plots, and so references to using the function will be referred to as **`ggplot()`** and the package as a whole as **`ggplot2`**
 
-**`ggplot2`** plots work best with data in the 'tidy', \'long\' format, i.e., a column for every variable, and a row for every observation. Well-structured data will save you lots of time when making figures with **`ggplot2`**
+**`ggplot2`** plots work best with data in the 'tidy', 'long' format, i.e., a column for every variable, and a row for every observation. Well-structured data will save you lots of time when making figures with **`ggplot2`**
 
 ggplot graphics are built layer by layer by adding new elements. Adding layers in this fashion allows for extensive flexibility and customization of plots.
 
@@ -1150,10 +1150,9 @@ ggplot(data = tree_bird)
 
     ```
 
-```{=html}
 <!-- -->
-```
--   add \'geoms\' -- graphical representations of the data in the plot (points, lines, bars). **`ggplot2`** offers many different geoms; we will use some common ones today, including:
+
+-   add 'geoms' -- graphical representations of the data in the plot (points, lines, bars). **`ggplot2`** offers many different geoms; we will use some common ones today, including:
 
     -   `geom_point()` for scatter plots, dot plots, etc.
 
@@ -1161,7 +1160,7 @@ ggplot(data = tree_bird)
 
     -   `geom_line()` for trend lines, time series, etc.
 
-To add a geom to the plot use `+` operator. Because we have two continuous variables, let\'s use `geom_point()` first:
+To add a geom to the plot use `+` operator. Because we have two continuous variables, let's use `geom_point()` first:
 
 ```{r}
 ggplot(data = tree_bird, mapping = aes(x = count_tree_species, y = count_bird_species)) +
@@ -1353,7 +1352,7 @@ In addition to `theme_bw()`, which changes the plot background to white, **`ggpl
 
 Take a look at the [**`ggplot2`** cheat sheet](https://posit.co/wp-content/uploads/2022/10/data-visualization-1.pdf), and think of ways you could improve the plot.
 
-Now, let\'s change names of axes to something more informative than \'year\' and \'n\' and add a title to the figure:
+Now, let's change names of axes to something more informative than 'year' and 'n' and add a title to the figure:
 
 ```{r}
 ggplot(data = yearly_avg_fun_long, aes(x = Year, y = Avg_percent, col = Quadrat_Function)) +
@@ -1378,7 +1377,7 @@ ggplot(data = yearly_avg_fun_long, aes(x = Year, y = Avg_percent, col = Quadrat_
 
 Note that it is also possible to change the fonts of your plots. If you are on Windows, you may have to install the [**`extrafont`** package](https://github.com/wch/extrafont), and follow the instructions included in the README for this package.
 
-After our manipulations, you may notice that the values on the x-axis are still not properly readable. Let\'s change the orientation of the labels and adjust them vertically and horizontally so they don\'t overlap. You can use a 90 degree angle, or experiment to find the appropriate angle for diagonally oriented labels. We can also modify the facet label text (`strip.text`) to italicize the genus names:
+After our manipulations, you may notice that the values on the x-axis are still not properly readable. Let's change the orientation of the labels and adjust them vertically and horizontally so they don't overlap. You can use a 90 degree angle, or experiment to find the appropriate angle for diagonally oriented labels. We can also modify the facet label text (`strip.text`) to italicize the genus names:
 
 ```{r}
 ggplot(data = yearly_avg_fun_long, aes(x = Year, y = Avg_percent, col = Quadrat_Function)) +
@@ -1400,7 +1399,7 @@ ggplot(data = yearly_avg_fun_long, aes(x = Year, y = Avg_percent, col = Quadrat_
 Faceting is a great tool for splitting one plot into multiple plots, but sometimes you may want to produce a single figure that contains multiple plots using different variables or even different data frames. The **`patchwork`** package allows us to combine separate ggplots into a single figure while keeping everything aligned properly. Like most R packages, we can install `patchwork` from CRAN, the R package repository:
 
 ```{r}
-install.packages("patchwork")
+#install.packages("patchwork")
 ```
 
 ```{r}
